# mild-matrix

./: LICENSE  README.md  pyproject.toml
mild-matrix/: __init__.py
mild_matrix/: __init__.py  matrix.py  permutation.py  quaternion.py  utils.py
mild_matrix.egg-info/: PKG-INFO  SOURCES.txt
src/mild-matrix/: __init__.py
test/: test.ipynb
